# Jumping_Robot

./: .gitignore  1.txt  BO_sampling_points.txt  README.md  data.txt  data_new.txt  data_old.txt  direct_opt.py  environment.yaml  imperfection_test.py  inverse_design.py  main.py  model.yaml  opt_comparison.py  optimization_test.py  requirements.txt  savedData.txt  test_cases.txt  utils.py  visualize.py  visualize_raw_data.py
dataloader/: dataset.py
model/: model_list.py
output/checkpoints/: checkpoint_10.pt  checkpoint_100.pt  checkpoint_110.pt  checkpoint_120.pt  checkpoint_130.pt  checkpoint_140.pt  checkpoint_150.pt  checkpoint_160.pt  checkpoint_170.pt  checkpoint_180.pt  checkpoint_190.pt  checkpoint_20.pt  checkpoint_200.pt  checkpoint_30.pt  checkpoint_40.pt  checkpoint_50.pt  checkpoint_60.pt  checkpoint_70.pt  checkpoint_80.pt  checkpoint_90.pt  forward_model.pt
simulations/: CMakeLists.txt  option.txt  simDER
simulations/src/: eigenIncludes.h  elasticBendingForce.cpp  elasticBendingForce.h  elasticCouplingForce.cpp  elasticCouplingForce.h  elasticPlate.cpp  elasticPlate.h  externalContactForce.cpp  externalContactForce.h  externalGravityForce.h  externalMagneticForce.cpp  externalMagneticForce.h  main.cpp  setInput.cpp  setInput.h  timeStepper.cpp  timeStepper.h  world.cpp  world.h
src/: imperfection_test.py  inverse_design.py  optimization_test.py  train_model.py  utils.py
src/config/: configer.py
src/dataloader/: dataset.py
